@@ -2,6 +2,9 @@ v2.8.20:
 * Prevent the use of LDAPSearchScope or LDAPUseSSL when LDAPServer specifies
   a URL. Instead, the desired search scope and SSL setting should be
   specified by the URL.
+* When using OpenSSL for local password verification (as opposed to
+  'LDAPAuthBinds on'), make the Base64 encoding buffer larger to ensure
+  we account for expansion resulting from the encoding.
 
 v2.8.19:
 * Fix compilation with old LDAP SDKs (LDAP_API_VERSION < 2000). Thanks to
